[package]
name = "axum-snippets"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures = "0.3.32"
reqwest = "0.13.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.50.0", features = ["rt-multi-thread", "fs"]}
tokio-util = "0.7.18"

[dev-dependencies]
