[package]
name = "ffmpeg-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
futures = "0.3.32"
ez-ffmpeg = { version = "0.10.0", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "fs", "io-util"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
same-file = "1.0.6"
reqwest = { version = "0.13.2", features = ["stream"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[bench]]
name = "ffmpeg_test"
harness = false
